internal/octogo/testdata/import_cycle.ogo
// ERROR "not allowed" at import_cycle/b/b.ogo:2
import "import_cycle"
